fix: scrollbar

--- a/assets/styles/helpers/variables.scss
+++ b/assets/styles/helpers/variables.scss
@@ -21,7 +21,6 @@
   );
   --white: #ffffff;
   --red: #e73737;
-  --accent: #9047ff;
   --vh: 100vh;
   --gray-100: #f8f9fa;
   --gray-200: #e9ecef;
